--- a/_data/me.yml
+++ b/_data/me.yml
@@ -5,7 +5,7 @@ job: " "
 hi: "Fatih İdiz"
 avatar_img: "/assets/img/me1.jpg"
 intro:
-  - "Hi. I'm Saul Goodman. Did you know that you have rights? The Constitution says you do. And so do I. I believe that until proven guilty, every man, woman, and child in this country is innocent. And that's why I fight for you, Albuquerque! Better call Saul."
+  - "Hi. I'm Saul Goodman. Did you know that you have rights? The Constitution says you do. And so do I. I believe that until proven guilty, every man, woman, and child in this country is innocent. And that's why I fight for you, Albuquerque! Better Call Saul."
 
 #skills:
 #  - name: "Programming"
